--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,14 @@
         <driver-binary-downloader-maven-plugin.version>1.0.17</driver-binary-downloader-maven-plugin.version>
         <!-- Configurable variables -->
         <threads>1</threads>
-        <browser>phantomjs</browser>
+        <browser>chrome</browser>
         <overwrite.binaries>false</overwrite.binaries>
         <skipTests>false</skipTests>
         <overwriteFilesThatExist>false</overwriteFilesThatExist>
+        <remote>false</remote>
+        <seleniumGridURL></seleniumGridURL>
+        <platform></platform>
+        <browserVersion></browserVersion>
     </properties>
 
 
@@ -100,6 +104,15 @@
                                 <phantomjs.binary.path>
                                     src\\test\\resources\\selenium_standalone_binaries\\windows\\phantomjs\\64bit\\phantomjs.exe
                                 </phantomjs.binary.path>
+
+                                <!--for Selenium Grid-->
+                                <remoteDriver>${remote}</remoteDriver>
+                                <gridURL>${seleniumGridURL}</gridURL>
+                                <desiredPlatform>${platform}</desiredPlatform>
+                                <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
+
+                                <!-- Screenshot directory -->
+                                <screenshotDirectory>${project.build.directory}/screenshots</screenshotDirectory>
 
                             </systemProperties>
                             <includes>
