--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,37 @@
 
                         </executions>
                     </plugin>
+
+
+                    <plugin>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <executions>
+                            <execution>
+                                <id>Start Docker</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>src\\main\\scripts\\startDocker.bat
+                                    </executable>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>Stop Docker</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>src\\main\\scripts\\stopDocker.bat
+                                    </executable>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                 </plugins>
             </build>
 
