--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>cucumber-core</artifactId>
             <version>1.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>3.141.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
