--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <!-- Dependency versions -->
         <selenium.version>3.141.5</selenium.version>
         <testng.version>6.14.3</testng.version>
+        <junit.version>4.12</junit.version>
         <!-- Plugin versions -->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven-failsafe-plugin.version>3.0.0-M2</maven-failsafe-plugin.version>
@@ -244,6 +245,14 @@
                     <version>${testng.version}</version>
                     <scope>test</scope>
                 </dependency>
+                <!-- https://mvnrepository.com/artifact/junit/junit -->
+                <dependency>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                    <version>4.12</version>
+                    <scope>${junit.version}</scope>
+                </dependency>
+
                 <!-- https://mvnrepository.com/artifact/com.codeborne/phantomjsdriver -->
                 <dependency>
                     <groupId>com.codeborne</groupId>
