--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <driver-binary-downloader-maven-plugin.version>1.0.17</driver-binary-downloader-maven-plugin.version>
         <!-- Configurable variables -->
         <threads>1</threads>
-        <browser>chrome</browser>
+        <browser>firefox</browser>
         <overwrite.binaries>false</overwrite.binaries>
         <skipTests>false</skipTests>
         <overwriteFilesThatExist>false</overwriteFilesThatExist>
@@ -259,6 +259,14 @@
                     <artifactId>phantomjsdriver</artifactId>
                     <version>1.4.4</version>
                 </dependency>
+
+                <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
+                <dependency>
+                    <groupId>com.codeborne</groupId>
+                    <artifactId>selenide</artifactId>
+                    <version>5.1.0</version>
+                </dependency>
+
             </dependencies>
         </profile>
     </profiles>
