--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,14 @@
                     <version>5.1.0</version>
                 </dependency>
 
+                <!-- https://mvnrepository.com/artifact/org.monte/screen-recorder -->
+                <dependency>
+                    <groupId>org.monte</groupId>
+                    <artifactId>screen-recorder</artifactId>
+                    <version>0.7.7</version>
+                </dependency>
+
+
             </dependencies>
         </profile>
     </profiles>
