--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,12 @@
                     <artifactId>selenide</artifactId>
                     <version>5.1.0</version>
                 </dependency>
+                <!-- https://mvnrepository.com/artifact/org.monte/monte-screen-recorder -->
+                <dependency>
+                    <groupId>com.github.stephenc.monte</groupId>
+                    <artifactId>monte-screen-recorder</artifactId>
+                    <version>0.7.7.0</version>
+                </dependency>
 
 
             </dependencies>
